--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
       "lostark",
       "game"
     ],
-    "repository": "https://github.com/Mokocoder/LaBot",
+    "repository": "https://github.com/Starwarsz/-.git",
     "env": {
       "DISCORD_TOKEN": {
         "description": "디스코드 봇 토큰",
