--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-    "name": "labot",
+    "name": "starwars",
     "description": "Api를 이용한 로아봇",
     "keywords": [
       "lostark",
       "game"
     ],
-    "repository": "https://github.com/Mokocoder/LaBot",
+    "repository": "https://github.com/Starwarsz/-.git",
     "env": {
       "DISCORD_TOKEN": {
         "description": "디스코드 봇 토큰",
